--- a/projets.html
+++ b/projets.html
@@ -21,8 +21,8 @@
     <nav>
         <ul>
             <li><a href="index.html">Accueil</a></li>
-			<li><a href="Entreprise.html">Presentation de l'entreprise</a></li>
-            <li><a href="Services.html">Nos Services</a></li>
+	    <li><a href="entreprise.html">Presentation de l'entreprise</a></li>
+            <li><a href="services.html">Nos Services</a></li>
             <li><a href="projets.html">Projets</a></li>
         </ul>
     </nav>
