--- a/services.html
+++ b/services.html
@@ -47,7 +47,7 @@
 
         <section id="service3">
             <h3>3. Solutions Cloud</h3>
-            <img src="./image/Cloud.png" alt="Solutions cloud">
+            <img src="./image/cloud.png" alt="Solutions cloud">
             <p>Nous vous aidons à migrer vers le cloud, à sécuriser vos données et à utiliser des outils cloud avancés pour stimuler l'efficacité et la collaboration au sein de votre entreprise.</p>
         </section>
 
